--- a/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
+++ b/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="kMx-Hq-zKZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Imx-Z9-FFg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -10,7 +10,7 @@
         <!--VIAFLY-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CenkerDemirViaflyTestProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="CenkerDemirViaflyTestProject" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -70,6 +70,9 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="VIAFLY" id="N62-3m-7Kv">
+                        <barButtonItem key="leftBarButtonItem" image="categories-icon.png" id="W4B-jj-0ZQ">
+                            <color key="tintColor" red="0.085177951390000006" green="0.08642578125" blue="0.085313585070000003" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" id="fDa-m7-AJA">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Vii-fB-f0T">
                                 <rect key="frame" x="275" y="7" width="84" height="30"/>
@@ -84,12 +87,66 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="categoriesButtonForSideBar" destination="W4B-jj-0ZQ" id="0hP-l2-82m"/>
                         <outlet property="itemsTableView" destination="4wI-9x-X2S" id="gME-Bc-bt5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5692" y="792.95352323838085"/>
+            <point key="canvasLocation" x="6065" y="1073"/>
+        </scene>
+        <!--Reveal View Controller-->
+        <scene sceneID="T0I-TR-xxp">
+            <objects>
+                <viewController id="Imx-Z9-FFg" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vwZ-96-TLa"/>
+                        <viewControllerLayoutGuide type="bottom" id="BJH-9x-fn2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ImM-qV-JUr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="h5q-db-5kc" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="voQ-Gp-ajn"/>
+                        <segue destination="kMx-Hq-zKZ" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="GuT-4T-0Mf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fbo-hx-Kpw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4254" y="557"/>
+        </scene>
+        <!--Side Bar Table View Controller-->
+        <scene sceneID="k0t-39-Rpj">
+            <objects>
+                <tableViewController id="h5q-db-5kc" customClass="SideBarTableViewController" customModule="CenkerDemirViaflyTestProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="xwh-KB-uhx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="sideBarCell" id="xOp-Ee-u1x">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xOp-Ee-u1x" id="Etj-kR-SWH">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="kMx-Hq-zKZ" kind="custom" identifier="allItemsSegue" customClass="SWRevealViewControllerSeguePushController" id="EvY-Jo-6bs"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="h5q-db-5kc" id="IlZ-E6-S0W"/>
+                            <outlet property="delegate" destination="h5q-db-5kc" id="M1f-aE-ddM"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NRm-j1-eeA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5257" y="90"/>
         </scene>
         <!--VIAFLY-->
         <scene sceneID="yX6-2X-gcd">
@@ -108,7 +165,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="htu-zb-Xnk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4752.8000000000002" y="792.95352323838085"/>
+            <point key="canvasLocation" x="5258" y="1072"/>
         </scene>
     </scenes>
     <resources>
@@ -116,4 +173,7 @@
         <image name="categories-icon.png" width="30" height="30"/>
         <image name="sort-dollar.png" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="EvY-Jo-6bs"/>
+    </inferredMetricsTieBreakers>
 </document>
