--- a/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
+++ b/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
@@ -24,10 +24,10 @@
                                 <color key="separatorColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="PoS-aa-7u4" detailTextLabel="UzD-tJ-yP4" style="IBUITableViewCellStyleSubtitle" id="vyV-yL-Mzk">
-                                        <rect key="frame" x="0.0" y="28" width="338" height="90"/>
+                                        <rect key="frame" x="0.0" y="28" width="337.5" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" tableViewCell="vyV-yL-Mzk" id="bnL-aF-dKU">
-                                            <frame key="frameInset" width="338" height="89"/>
+                                            <frame key="frameInset" width="337.5" height="89"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PoS-aa-7u4">
@@ -93,7 +93,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6065" y="1073"/>
+            <point key="canvasLocation" x="6694" y="1036"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="T0I-TR-xxp">
@@ -109,44 +109,62 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="h5q-db-5kc" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="voQ-Gp-ajn"/>
                         <segue destination="kMx-Hq-zKZ" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="GuT-4T-0Mf"/>
+                        <segue destination="B0k-yX-jmu" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="OWP-cy-jv0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fbo-hx-Kpw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4254" y="557"/>
         </scene>
-        <!--Side Bar Table View Controller-->
-        <scene sceneID="k0t-39-Rpj">
+        <!--Side Bar View Controller-->
+        <scene sceneID="FMj-4y-7vk">
             <objects>
-                <tableViewController id="h5q-db-5kc" customClass="SideBarTableViewController" customModule="CenkerDemirViaflyTestProject" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="xwh-KB-uhx">
+                <viewController id="B0k-yX-jmu" customClass="SideBarViewController" customModule="CenkerDemirViaflyTestProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pDg-7f-KTf"/>
+                        <viewControllerLayoutGuide type="bottom" id="DE4-rS-Gd7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4yG-IY-8tp">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="sideBarCell" id="xOp-Ee-u1x">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xOp-Ee-u1x" id="Etj-kR-SWH">
-                                    <frame key="frameInset" width="375" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="kMx-Hq-zKZ" kind="custom" identifier="allItemsSegue" customClass="SWRevealViewControllerSeguePushController" id="EvY-Jo-6bs"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="h5q-db-5kc" id="IlZ-E6-S0W"/>
-                            <outlet property="delegate" destination="h5q-db-5kc" id="M1f-aE-ddM"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NRm-j1-eeA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nt7-MI-0aZ">
+                                <frame key="frameInset" minX="16" minY="85" width="239" height="562"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="sideBarCell" id="5qZ-XI-Ltq">
+                                        <rect key="frame" x="0.0" y="28" width="239" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5qZ-XI-Ltq" id="4et-IL-OHg">
+                                            <frame key="frameInset" width="239" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="kMx-Hq-zKZ" kind="custom" identifier="itemListSegue" customClass="SWRevealViewControllerSeguePushController" id="JQ6-4w-e2x"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CATEGORIES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="psi-aR-hg9">
+                                <frame key="frameInset" minX="16" minY="56" width="239" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <connections>
+                        <outlet property="sideBarTableView" destination="nt7-MI-0aZ" id="rKl-4E-lk7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lkR-jy-ljj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5257" y="90"/>
+            <point key="canvasLocation" x="5257" y="166"/>
         </scene>
         <!--VIAFLY-->
         <scene sceneID="yX6-2X-gcd">
@@ -165,7 +183,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="htu-zb-Xnk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5258" y="1072"/>
+            <point key="canvasLocation" x="5586" y="1036"/>
         </scene>
     </scenes>
     <resources>
@@ -174,6 +192,6 @@
         <image name="sort-dollar.png" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EvY-Jo-6bs"/>
+        <segue reference="JQ6-4w-e2x"/>
     </inferredMetricsTieBreakers>
 </document>
