--- a/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
+++ b/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--VIAFLY-->
+        <!--Viafly-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="CenkerDemirViaflyTestProject" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="64" width="380" height="603"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4wI-9x-X2S">
@@ -25,10 +25,10 @@
                                 <color key="separatorColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="PoS-aa-7u4" detailTextLabel="UzD-tJ-yP4" style="IBUITableViewCellStyleSubtitle" id="vyV-yL-Mzk">
-                                        <rect key="frame" x="0.0" y="28" width="380" height="90"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" tableViewCell="vyV-yL-Mzk" id="bnL-aF-dKU">
-                                            <frame key="frameInset" width="380" height="89"/>
+                                            <frame key="frameInset" width="320" height="89"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PoS-aa-7u4">
@@ -53,14 +53,14 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4wI-9x-X2S" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.6" constant="233.19999999999999" id="0ji-Sh-1Gu"/>
-                            <constraint firstItem="4wI-9x-X2S" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-4" id="5oX-Iz-4Ef"/>
+                            <constraint firstItem="4wI-9x-X2S" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.96" id="0ji-Sh-1Gu" userLabel="Items Table View.height = 0.7 × height"/>
+                            <constraint firstItem="4wI-9x-X2S" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="N1C-kS-Mga"/>
                             <constraint firstItem="4wI-9x-X2S" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Veg-dE-syc"/>
                             <constraint firstItem="4wI-9x-X2S" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XD0-wf-hfW"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="VIAFLY" id="N62-3m-7Kv">
+                    <navigationItem key="navigationItem" title="Viafly" id="N62-3m-7Kv">
                         <barButtonItem key="leftBarButtonItem" image="categories-icon.png" id="W4B-jj-0ZQ">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
@@ -97,7 +97,7 @@
                         <viewControllerLayoutGuide type="bottom" id="BJH-9x-fn2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ImM-qV-JUr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -119,7 +119,7 @@
                         <viewControllerLayoutGuide type="bottom" id="DE4-rS-Gd7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4yG-IY-8tp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nt7-MI-0aZ">
@@ -168,14 +168,12 @@
             </objects>
             <point key="canvasLocation" x="5257" y="166"/>
         </scene>
-        <!--VIAFLY-->
+        <!--Navigation Controller-->
         <scene sceneID="yX6-2X-gcd">
             <objects>
-                <navigationController title="VIAFLY" automaticallyAdjustsScrollViewInsets="NO" id="kMx-Hq-zKZ" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kMx-Hq-zKZ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="380" height="667"/>
                     <navigationBar key="navigationBar" clipsSubviews="YES" contentMode="scaleToFill" translucent="NO" id="4mt-L2-r9l">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
