changed the title and a few settings

--- a/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
+++ b/CenkerDemirViaflyTestProject/CenkerDemirViaflyTestProject/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Viafly-->
+        <!--Retail Store-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="CenkerDemirViaflyTestProject" customModuleProvider="target" sceneMemberID="viewController">
@@ -28,18 +28,18 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" tableViewCell="vyV-yL-Mzk" id="bnL-aF-dKU">
-                                            <frame key="frameInset" width="320" height="89"/>
+                                            <frame key="frameInset" width="320" height="89.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PoS-aa-7u4">
-                                                    <frame key="frameInset" minX="15" minY="30" width="28" height="15"/>
+                                                    <frame key="frameInset" minX="15" minY="31" width="27.5" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UzD-tJ-yP4">
-                                                    <frame key="frameInset" minX="15" minY="45" width="37" height="15"/>
+                                                    <frame key="frameInset" minX="15" minY="45.5" width="37" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
                                                     <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -60,7 +60,7 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Viafly" id="N62-3m-7Kv">
+                    <navigationItem key="navigationItem" title="Retail Store" id="N62-3m-7Kv">
                         <barButtonItem key="leftBarButtonItem" image="categories-icon.png" id="W4B-jj-0ZQ">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
